Current:

19.03.1:
 * HighDPI fixes for ArchLinux, Windows and SuSE
 * Resolved crashes on RedHat and MS Windows
 * SBCL's compilation messages now appear in the status bar, not
   in the worksheet.
 * Removed an unneeded "maxima has finished calculating" on startup.
 * Many small bug fixes.
 * wxWidgets >= 3.1.0: Corrected the toolbar icon size.

19.03.0:
 * The ESC sequences for inputting symbols now use autocompletion.
 * Use wxAutoBufferedPaintDC for drawing the worksheet instead of
   implementing our own version of it.
 * The usual bug fixes, this time including one bug fix that makes
   wxMaxima work again on Gentoo and some help path lookup fixes.

19.01.1-19.02.2:
 * Bug fixes only

19.01.0:
 * Many bugfixes for the display code
 * The desktop integration files now adher to the newest standards
 * Refactoring in order to make the code easier to understand.
 * Spelling fixes
 * Shipped around a wxWidgets <3.1 bug for embedding bitmaps in svg
 * Many Links were updated to https
 * A better help file detection that still works if there is no .hhp file.
 * A command-line option that allows to specify the location of maxima.

18.12.0:
  * Use C++'s strong typing for more enums.
  * Another big SpeedUp.
  * Now we make sure that the Manifest telling wxMaxima is high-DPI aware is
    the only manifest packaged with the .exe file.
  * Tried to simplify the display code
  * Source file and function names that more closely their current meaning.
  * Many bug fixes.
  * Now we pass the canonical locale name to maxima, not the short one.
  * We no more try to set maxima's locale if it doesn't differ from the system's
    default one.

18.11.2:
  * Better horizontal spacing of cells that are wider than lines

18.11.1:
  * Better horizontal spacing of headings.

18.11.0:
  * GTK3 Compatibility
  * Worked around C compiler bugs that truncated the beginning of long strings
  * Zoom gestures for more computers
  * A better lisp mode