@@ -1,4 +1,6 @@
 Current:
+ * The cursor width now is taken from the current screen
+ * Autocompletion sometimes cleared the result after inputting it.
 
 19.03.1:
  * HighDPI fixes for ArchLinux, Windows and SuSE
